@@ -1036,12 +1036,12 @@ public abstract class Doc
 		}
 		//  Get All Currencies
 		HashSet<Integer> set = new HashSet<Integer>();
-		set.add(new Integer(getC_Currency_ID()));
+		set.add(Integer.valueOf(getC_Currency_ID()));
 		for (int i = 0; p_lines != null && i < p_lines.length; i++)
 		{
 			int C_Currency_ID = p_lines[i].getC_Currency_ID();
 			if (C_Currency_ID != NO_CURRENCY)
-				set.add(new Integer(C_Currency_ID));
+				set.add(Integer.valueOf(C_Currency_ID));
 		}
 
 		//  just one and the same
