@@ -50,7 +50,7 @@ public class MSLACriteria extends X_PA_SLA_Criteria
 	 */
 	public static MSLACriteria get (Properties ctx, int PA_SLA_Criteria_ID, String trxName)
 	{
-		Integer key = new Integer (PA_SLA_Criteria_ID);
+		Integer key = Integer.valueOf(PA_SLA_Criteria_ID);
 		MSLACriteria retValue = (MSLACriteria) s_cache.get (key);
 		if (retValue != null)
 			return retValue;
@@ -134,7 +134,7 @@ public class MSLACriteria extends X_PA_SLA_Criteria
 		try
 		{
 			Class<?> clazz = Class.forName(getClassname());
-			SLACriteria retValue = (SLACriteria)clazz.newInstance();
+			SLACriteria retValue = (SLACriteria)clazz.getDeclaredConstructor().newInstance();
 			return retValue;
 		}
 		catch (Exception e)
