@@ -149,7 +149,7 @@ public class VStatementCreateFromBatch extends StatementCreateFromBatch implemen
 		bankAccountField = new VLookup ("C_BankAccount_ID", true, true, true, lookup);
 		//  Set Default
 		int C_BankAccount_ID = Env.getContextAsInt(Env.getCtx(), p_WindowNo, "C_BankAccount_ID");
-		bankAccountField.setValue(new Integer(C_BankAccount_ID));
+		bankAccountField.setValue(Integer.valueOf(C_BankAccount_ID));
 		bankAccountField.addActionListener(this);
 		//  initial Loading
 		authorizationField = new VString ("authorization", false, false, true, 10, 30, null, null);
@@ -302,7 +302,7 @@ public class VStatementCreateFromBatch extends StatementCreateFromBatch implemen
 				m_frame.getGridTab()));
 	}
 	
-	protected void loadTableOIS (Vector<?> data)
+	protected void loadTableOIS (Vector<? extends Vector> data)
 	{
 		//  Remove previous listeners
 		form.getMiniTable().getModel().removeTableModelListener(form);
