@@ -211,7 +211,7 @@ public class MiniTable extends CTable implements IMiniTable
 			return false;
 
 		//  is the column RW?
-		if (m_readWriteColumn.contains(new Integer(column)))
+		if (m_readWriteColumn.contains(Integer.valueOf(column)))
 			return true;
 		return false;
 	}   //  isCellEditable
@@ -224,7 +224,7 @@ public class MiniTable extends CTable implements IMiniTable
 	public void setColumnReadOnly (int column, boolean readOnly)
 	{
 		//  Column is ReadWrite
-		if (m_readWriteColumn.contains(new Integer(column)))
+		if (m_readWriteColumn.contains(Integer.valueOf(column)))
 		{
 			//  Remove from list
 			if (readOnly)
@@ -242,7 +242,7 @@ public class MiniTable extends CTable implements IMiniTable
 		}
 		//  current column is R/O - ReadWrite - add to list
 		else if (!readOnly)
-			m_readWriteColumn.add(new Integer(column));
+			m_readWriteColumn.add(Integer.valueOf(column));
 	}   //  setColumnReadOnly
 
 	
@@ -367,7 +367,7 @@ public class MiniTable extends CTable implements IMiniTable
 			{
 				tc.setCellEditor(new ROCellEditor());
 			}
-			m_minWidth.add(new Integer(10));
+			m_minWidth.add(Integer.valueOf(10));
 			tc.setMaxWidth(20);
 			tc.setPreferredWidth(20);
 			tc.setResizable(false);
@@ -387,7 +387,7 @@ public class MiniTable extends CTable implements IMiniTable
 				check.setHorizontalAlignment(SwingConstants.CENTER);
 				tc.setCellEditor(new DefaultCellEditor(check));
 			}
-			m_minWidth.add(new Integer(30));
+			m_minWidth.add(Integer.valueOf(30));
 			
 			tc.setHeaderRenderer(new VHeaderRenderer(DisplayType.YesNo));
 		}
@@ -399,7 +399,7 @@ public class MiniTable extends CTable implements IMiniTable
 				tc.setCellEditor(new ROCellEditor());
 			else
 				tc.setCellEditor(new MiniCellEditor(c));
-			m_minWidth.add(new Integer(30));
+			m_minWidth.add(Integer.valueOf(30));
 			
 			tc.setHeaderRenderer(new VHeaderRenderer(DisplayType.DateTime));
 		}
@@ -410,12 +410,12 @@ public class MiniTable extends CTable implements IMiniTable
 			if (readOnly)
 			{
 				tc.setCellEditor(new ROCellEditor());
-				m_minWidth.add(new Integer(70));
+				m_minWidth.add(Integer.valueOf(70));
 			}
 			else
 			{
 				tc.setCellEditor(new MiniCellEditor(c));
-				m_minWidth.add(new Integer(80));
+				m_minWidth.add(Integer.valueOf(80));
 			}
 			
 			tc.setHeaderRenderer(new VHeaderRenderer(DisplayType.Number));
@@ -427,12 +427,12 @@ public class MiniTable extends CTable implements IMiniTable
 			if (readOnly)
 			{
 				tc.setCellEditor(new ROCellEditor());
-				m_minWidth.add(new Integer(70));
+				m_minWidth.add(Integer.valueOf(70));
 			}
 			else
 			{
 				tc.setCellEditor(new MiniCellEditor(c));
-				m_minWidth.add(new Integer(80));
+				m_minWidth.add(Integer.valueOf(80));
 			}
 			
 			tc.setHeaderRenderer(new VHeaderRenderer(DisplayType.Number));
@@ -445,7 +445,7 @@ public class MiniTable extends CTable implements IMiniTable
 				tc.setCellEditor(new ROCellEditor());
 			else
 				tc.setCellEditor(new MiniCellEditor(c));
-			m_minWidth.add(new Integer(30));
+			m_minWidth.add(Integer.valueOf(30));
 			
 			tc.setHeaderRenderer(new VHeaderRenderer(DisplayType.Number));
 		}
@@ -457,7 +457,7 @@ public class MiniTable extends CTable implements IMiniTable
 				tc.setCellEditor(new ROCellEditor());
 			else
 				tc.setCellEditor(new MiniCellEditor(String.class));
-			m_minWidth.add(new Integer(30));
+			m_minWidth.add(Integer.valueOf(30));
 			
 			tc.setHeaderRenderer(new VHeaderRenderer(DisplayType.String));
 		}
@@ -509,7 +509,7 @@ public class MiniTable extends CTable implements IMiniTable
 					if (c == IDColumn.class)
 						data = new IDColumn(rs.getInt(colIndex));
 					else if (c == Boolean.class)
-						data = new Boolean("Y".equals(rs.getString(colIndex)));
+						data = Boolean.valueOf("Y".equals(rs.getString(colIndex)));
 					else if (c == Timestamp.class)
 						data = rs.getTimestamp(colIndex);
 					else if (c == BigDecimal.class)
@@ -580,7 +580,7 @@ public class MiniTable extends CTable implements IMiniTable
 					if (c == IDColumn.class)
 						data = new IDColumn(((Integer)data).intValue());
 					else if (c == Double.class)
-						data = new Double(((BigDecimal)data).doubleValue());
+						data = Double.valueOf(((BigDecimal)data).doubleValue());
 				}
 				//  store
 				setValueAt(data, row, col);
@@ -790,15 +790,15 @@ public class MiniTable extends CTable implements IMiniTable
 					}
 					else if (c == Double.class)
 					{
-						Double subtotal = new Double(0);
+						Double subtotal = Double.valueOf(0);
 						if(total[col] != null)
 							subtotal = (Double)(total[col]);
 						
 						Double amt =  (Double) data;
 						if(subtotal == null)
-							subtotal = new Double(0);
+							subtotal = Double.valueOf(0);
 						if(amt == null )
-							amt = new Double(0);
+							amt = Double.valueOf(0);
 						total[col] = subtotal + amt;
 						
 					}		
@@ -865,15 +865,15 @@ public class MiniTable extends CTable implements IMiniTable
 					}
 					else if (c == Double.class)
 					{
-						Double subtotal = new Double(0);
+						Double subtotal = Double.valueOf(0);
 						if(total[col] != null)
 							subtotal = (Double)(total[col]);
 						
 						Double amt =  (Double) data;
 						if(subtotal == null)
-							subtotal = new Double(0);
+							subtotal = Double.valueOf(0);
 						if(amt == null )
-							amt = new Double(0);
+							amt = Double.valueOf(0);
 						total[col] = subtotal + amt;
 						
 					}		
