@@ -18,6 +18,7 @@
 package org.adempiere.webui.editor;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.text.DecimalFormat;
 
 import org.adempiere.webui.ClientInfo;
@@ -176,10 +177,10 @@ public class WNumberEditor extends WEditor implements ContextMenuListener
 	        
 	        if (displayType == DisplayType.Integer) {
 		        if (newValue != null && newValue instanceof BigDecimal) {
-		        	newValue = new Integer(((BigDecimal)newValue).intValue());
+		        	newValue = Integer.valueOf(((BigDecimal)newValue).intValue());
 		        }
 		        if (oldValue != null && oldValue instanceof BigDecimal) {
-		        	oldValue = new Integer(((BigDecimal)oldValue).intValue());
+		        	oldValue = Integer.valueOf(((BigDecimal)oldValue).intValue());
 		        }
 	        }
 	        
@@ -221,7 +222,7 @@ public class WNumberEditor extends WEditor implements ContextMenuListener
     		divisor = BigDecimal.TEN;
     	else
     		divisor = BigDecimal.TEN.pow(decimalPlaces);
-    	BigDecimal newValue = oldValue.divide(divisor, decimalPlaces, BigDecimal.ROUND_HALF_UP);
+    	BigDecimal newValue = oldValue.divide(divisor, decimalPlaces, RoundingMode.HALF_UP);
     	return newValue;
     } //getAddDecimalPlaces
 
