@@ -272,7 +272,7 @@ public class InfoInOutPanel extends InfoPanel implements ValueChangeListener, Ev
 		String bp = Env.getContext(Env.getCtx(), p_WindowNo, "C_BPartner_ID");
 
 		if (bp != null && bp.length() != 0)
-			fBPartner_ID.setValue(new Integer(bp));
+			fBPartner_ID.setValue(Integer.valueOf(bp));
 
 		// Prepare table
 
