@@ -48,7 +48,7 @@ public class ReportPool
     
     public ReportInfo getReport (int AD_Process_ID )
     {
-/*        ReportInfo reportinfo = (ReportInfo) pool.get(new Integer(AD_Process_ID));
+/*        ReportInfo reportinfo = (ReportInfo) pool.get(Integer.valueOf(AD_Process_ID));
         if (reportinfo == null)
         {
             reportinfo = loadReport(AD_Process_ID);
@@ -78,7 +78,7 @@ public class ReportPool
     {
         if(refresh)
         {
-            pool.put(new Integer(AD_Process_ID), reportinfo);            
+            pool.put(Integer.valueOf(AD_Process_ID), reportinfo);            
         }
         else
         {
@@ -95,7 +95,7 @@ public class ReportPool
             	size--;
             }
             
-            pool.put(new Integer(AD_Process_ID), reportinfo);
+            pool.put(Integer.valueOf(AD_Process_ID), reportinfo);
             size++;            
         }
         if (log.isLoggable(Level.INFO)) log.info("Load " + reportinfo + " into Report Pool" + " Size=" + size);
